[tool.poetry]
name = "luban_common"
version = "3.3.3"
description = "鲁班API基础库"
authors = ["mongnet <250021520@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mongnet/luban_common"
repository = "https://github.com/mongnet/luban_common"
keywords = ["api", "Testing", "pytest", "luban_common"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.1"
faker = "^14.2.1"
chevron = "^0.14.0"
py = "^1.11.0"
pathlib2 = "^2.3.7"
xmltodict = "^0.13.0"
suds-py3 = "^1.4.5"
"ruamel.yaml" = "^0.17.21"
cleo = "^2.0.1"
openpyxl = "^3.1.2"
mitmproxy = "^9.0.1"
pytest-metadata = "3.0.0"
jinja2 = "^3.1.2"
jmespath = "^1.0.1"
pytest-html = "^4.1.1"
pytest = "^7.4.3"
requests = "^2.31.0"
jsonpath = "^0.82.2"
allure-pytest = "^2.13.2"
beautifulsoup4 = "^4.12.2"
playwright = "^1.40.0"
pytest-playwright = "^0.4.3"
sqlalchemy = "^2.0.23"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[tool.poetry.scripts]
luban = "luban_common.console:main"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple/"
priority = "default"

[tool.poetry.plugins."pytest11"]
"plugin" = "luban_common.plugin"
"fixture" = "luban_common.fixture"

[build-system]
requires = ["poetry>=1.3"]
build-backend = "poetry.masonry.api"

